# AstraShastra-AI

./: README.md
mayaguard/: .env.example  .gitignore  CONTRIBUTING.md  INTEGRATION.md  LICENSE  README.md  demo_run.py  docker-compose.yml  main.py  pyproject.toml
mayaguard/adapters/: base.py  default.py
mayaguard/adapters/devops/: __init__.py
mayaguard/adapters/legal/: __init__.py
mayaguard/adapters/medical/: __init__.py
mayaguard/benchmarks/: dry_run_test.py
mayaguard/benchmarks/datasets/: devops_seed.json  legal_seed.json  medical_seed.json
mayaguard/core/: config.py  logging.py  models.py
mayaguard/core/evaluation/: evaluator.py
mayaguard/core/hallucination/: detector.py
mayaguard/core/inference/: __init__.py  ollama_client.py  vllm_client.py
mayaguard/core/retrieval/: retriever.py
mayaguard/core/scoring/: controller.py
mayaguard/core/verification/: finetuned_verifier.py  self_reflection.py  verifier.py
mayaguard/docker/: Dockerfile.api  Dockerfile.dashboard
mayaguard/finetuning/: README.md
mayaguard/finetuning/data/: generate_instruct_dataset.py  generate_nli_dataset.py
mayaguard/finetuning/notebooks/: finetune_claim_verifier.ipynb  finetune_qlora_llm.ipynb
mayaguard/frontend/: dashboard.py
mayaguard/serving/: app.py  pipeline.py  registry.py
mayaguard/tests/integration/: test_domain_pipeline.py
mayaguard/tests/unit/: test_hallucination.py
