[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mayaguard"
version = "0.1.0"
description = "Modular trustworthy AI framework with hallucination detection"
requires-python = ">=3.10"

dependencies = [
    # Inference
    "ollama>=0.2.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Vector DB
    "qdrant-client>=1.9.0",
    # Embeddings / ML
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    # Text processing
    "tiktoken>=0.7.0",
    "spacy>=3.7.0",
    # Observability
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    # Utilities
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
frontend = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "altair>=5.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
